Stylized reservations list

--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -1,18 +1,30 @@
 <app-home></app-home>
 
-<h2>Reservation List</h2>
+<p class="lead mt-5 mb-3">Reservation List</p>
 
-<ul *ngIf="reservations.length; else noReservation">
-  <li *ngFor="let reservation of reservations;">
-    Guest: {{reservation.guestName}}<br>
-    Email: {{reservation.guestEmail}}<br>
-    Room Number: {{reservation.roomNumber}}<br>
-    Check-In: {{reservation.checkInDate}}<br>
-    Check-Out: {{reservation.checkOutDate}}<br>
-    <button (click)="deleteReservation(reservation.id)">Delete</button>
-    <button [routerLink]="['/edit', reservation.id]">Edit</button>
-  </li>
-</ul>
+<table class="table table-striped" *ngIf="reservations.length; else noReservation">
+  <thead>
+    <th>Guest</th>
+    <th>Email</th>
+    <th>Room Number</th>
+    <th>Check-In</th>
+    <th>Check-Out</th>
+    <th></th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let reservation of reservations;">
+      <td>{{reservation.guestName}}</td>
+      <td>{{reservation.guestEmail}}</td>
+      <td>{{reservation.roomNumber}}</td>
+      <td>{{reservation.checkInDate}}</td>
+      <td>{{reservation.checkOutDate}}<td>
+      <td>
+        <button class="btn btn-danger mx-2" (click)="deleteReservation(reservation.id)">Delete</button>
+        <button class="btn btn-info mx-2" [routerLink]="['/edit', reservation.id]">Edit</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 <ng-template #noReservation>
   <p>No reservation available.</p>
